--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 body{
     background-color: darkorange;
 }
+
+h1{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 50px;
+
+}
+p {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
