--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+img{
+    border:5px solid rgb(27, 26, 26);
+    border-radius:20px;
+    max-height: 200px;
+
+}
+
+
+
+
 body{
     background-color: darkorange;
 }
